Add support for Push notifications

--- a/apps/multiplatform/android/src/main/AndroidManifest.xml
+++ b/apps/multiplatform/android/src/main/AndroidManifest.xml
@@ -186,6 +186,13 @@
         android:foregroundServiceType="mediaPlayback|microphone|camera|remoteMessaging"
     />
 
+    <service android:name=".PushService"
+      android:exported="false">
+      <intent-filter>
+        <action android:name="org.unifiedpush.android.connector.PUSH_EVENT"/>
+      </intent-filter>
+    </service>
+
     <receiver
         android:name=".CallService$CallActionReceiver"
         android:enabled="true"
