core: sync subsbriptions

--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -263,6 +263,7 @@ library
           Simplex.Chat.Store.SQLite.Migrations.M20250813_delivery_tasks
           Simplex.Chat.Store.SQLite.Migrations.M20250919_group_summary
           Simplex.Chat.Store.SQLite.Migrations.M20250922_remove_unused_connections
+          Simplex.Chat.Store.SQLite.Migrations.M20251007_subscriptions_sync
   other-modules:
       Paths_simplex_chat
   hs-source-dirs:
