--- a/apps/multiplatform/gradle.properties
+++ b/apps/multiplatform/gradle.properties
@@ -24,13 +24,13 @@ android.nonTransitiveRClass=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.jvm.target=11
 
-android.version_name=6.4.6
-android.version_code=321
+android.version_name=6.5-beta.0
+android.version_code=323
 
 android.bundle=false
 
-desktop.version_name=6.4.6
-desktop.version_code=121
+desktop.version_name=6.5-beta.0
+desktop.version_code=122
 
 kotlin.version=2.1.20
 gradle.plugin.version=8.7.0
