--- a/apps/multiplatform/.gitignore
+++ b/apps/multiplatform/.gitignore
@@ -1,7 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea
+.idea
 !/.idea/codeStyles/*
 .DS_Store
 /build
@@ -16,3 +16,4 @@ android/release
 common/build
 desktop/build
 release
+*.bak
