--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -6,7 +6,7 @@ FROM ubuntu:${TAG} AS build
 
 ARG GHC=9.6.3
 ARG CABAL=3.10.2.0
-ARG JAVA=17
+ARG JAVA=17.0.17.10.1
 
 ENV TZ=Etc/UTC \
     DEBIAN_FRONTEND=noninteractive
@@ -44,10 +44,9 @@ RUN apt-get update && \
 # depends on libjpeg.so.8 and liblcms2.so.2 which are NOT copied into final
 # /usr/lib/runtime/lib directory and I do not have time to figure out gradle.kotlin
 # to fix this :(
-RUN curl --proto '=https' --tlsv1.2 -sSf 'https://apt.corretto.aws/corretto.key' | gpg --dearmor -o /usr/share/keyrings/corretto-keyring.gpg &&\
-    echo "deb [signed-by=/usr/share/keyrings/corretto-keyring.gpg] https://apt.corretto.aws stable main" > /etc/apt/sources.list.d/corretto.list &&\
-    apt update &&\
-    apt install -y java-${JAVA}-amazon-corretto-jdk
+RUN export JAVA_MAJOR=$(printf "${JAVA}" | awk -F. '{print $1}') JAVA_DEB=$(printf "${JAVA}" | sed 's/\.1$/-1/') &&\
+    curl --proto '=https' --tlsv1.2 -sSf "https://corretto.aws/downloads/resources/${JAVA}/java-${JAVA_MAJOR}-amazon-corretto-jdk_${JAVA_DEB}_amd64.deb" -o java-corretto.deb &&\
+    apt install -y ./java-corretto.deb
 
 # Specify bootstrap Haskell versions
 ENV BOOTSTRAP_HASKELL_GHC_VERSION=${GHC}
