Dockerfile.build: fix env

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -73,6 +73,7 @@ RUN export JAVA_FILENAME='java-corretto.deb' \
 RUN useradd --create-home --shell /bin/bash build
 RUN mkdir /nix && chown build:build /nix
 USER build
+WORKDIR /home/build
 
 # Specify bootstrap Haskell versions
 ENV BOOTSTRAP_HASKELL_GHC_VERSION=${GHC}
@@ -85,7 +86,8 @@ ENV BOOTSTRAP_HASKELL_INSTALL_NO_STACK_HOOK=true
 # Install ghcup
 RUN curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | BOOTSTRAP_HASKELL_NONINTERACTIVE=1 sh
 
-# Adjust PATH
+# Adjust PATH/HOME
+ENV HOME="/home/build"
 ENV PATH="$HOME/.cabal/bin:$HOME/.ghcup/bin:$PATH"
 
 # Set both as default
