--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,6 +147,12 @@ jobs:
         with:
           swap-size-gb: 30
 
+      - name: Get UID and GID
+        id: ids
+        run: |
+          echo "uid=$(id -u)" >> $GITHUB_OUTPUT
+          echo "gid=$(id -g)" >> $GITHUB_OUTPUT
+
       # Otherwise we run out of disk space with Docker build
       - name: Free disk space
         if: matrix.should_run == true
@@ -177,6 +183,8 @@ jobs:
           build-args: |
             TAG=${{ matrix.os }}
             GHC=${{ matrix.ghc }}
+            USER_UID=${{ steps.ids.outputs.uid }}
+            USER_GID=${{ steps.ids.outputs.gid }}
 
       # Docker needs these flags for AppImage build:
       # --device /dev/fuse
