--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -409,7 +409,7 @@ executable simplex-broadcast-bot
 
 executable simplex-chat
   if flag(client_library)
-      buildable: True
+      buildable: False
   main-is: Main.hs
   other-modules:
       Server
