gitignore: ignore nodejs package lock

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ packages/simplex-chat-nodejs/build
 packages/simplex-chat-nodejs/.vscode
 packages/simplex-chat-nodejs/libs
 packages/simplex-chat-nodejs/node_modules
+packages/simplex-chat-nodejs/package-lock.json
