--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -124,6 +124,7 @@ library
           Simplex.Chat.Store.Postgres.Migrations.M20251017_chat_tags_cascade
           Simplex.Chat.Store.Postgres.Migrations.M20251117_member_relations_vector
           Simplex.Chat.Store.Postgres.Migrations.M20251128_migrate_member_relations
+          Simplex.Chat.Store.Postgres.Migrations.M20251230_strict_tables
   else
       exposed-modules:
           Simplex.Chat.Archive
