WIP: debug libjpeg in ubuntu pkg-config CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -220,6 +220,8 @@ jobs:
         if: matrix.should_run == true
         shell: docker exec -t builder sh -eu {0}
         run: |
+          pkg-config --list-all
+          pkg-config --list-all --debug
           cabal clean
           cabal update
           cabal build -j --enable-tests
