--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -539,6 +539,9 @@ jobs:
         id: windows_cli_build
         shell: msys2 {0}
         run: |
+          pkg-config --list-all
+          pkg-config --list-all --debug
+
           export PATH=$PATH:/c/ghcup/bin:$(echo /c/tools/ghc-*/bin || echo)
           scripts/desktop/prepare-openssl-windows.sh
           openssl_windows_style_path=$(echo `pwd`/dist-newstyle/openssl-3.0.15 | sed 's#/\([a-zA-Z]\)#\1:#' | sed 's#/#\\#g')
