--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -273,6 +273,7 @@ library
           Simplex.Chat.Store.SQLite.Migrations.M20251117_member_relations_vector
           Simplex.Chat.Store.SQLite.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.SQLite.Migrations.M20251230_strict_tables
+          Simplex.Chat.Store.SQLite.Migrations.M20251231_strict_tables_2
   other-modules:
       Paths_simplex_chat
   hs-source-dirs:
