--- a/simplex-chat.cabal
+++ b/simplex-chat.cabal
@@ -125,6 +125,7 @@ library
           Simplex.Chat.Store.Postgres.Migrations.M20251117_member_relations_vector
           Simplex.Chat.Store.Postgres.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.Postgres.Migrations.M20251230_strict_tables
+          Simplex.Chat.Store.Postgres.Migrations.M20260108_chat_indices
   else
       exposed-modules:
           Simplex.Chat.Archive
@@ -273,6 +274,7 @@ library
           Simplex.Chat.Store.SQLite.Migrations.M20251117_member_relations_vector
           Simplex.Chat.Store.SQLite.Migrations.M20251128_migrate_member_relations
           Simplex.Chat.Store.SQLite.Migrations.M20251230_strict_tables
+          Simplex.Chat.Store.SQLite.Migrations.M20260108_chat_indices
   other-modules:
       Paths_simplex_chat
   hs-source-dirs:
